@@ -937,7 +937,7 @@ run_scheduled_events(time_t now)
    * (if we've passed our internal checks). */
   if (time_to_fetch_directory < now) {
     /* Only caches actually need to fetch directories now. */
-    if (options->DirPort && !authdir_mode_v1(options)) {
+    if (dirserver_mode(options) && !authdir_mode_v1(options)) {
       /* XXX020 actually, we should only do this if we want to advertise
        * our dirport. not simply if we configured one. -RD */
       if (any_trusted_dir_is_v1_authority() &&
@@ -951,7 +951,7 @@ run_scheduled_events(time_t now)
   }
 
   /* Caches need to fetch running_routers; directory clients don't. */
-  if (options->DirPort && time_to_fetch_running_routers < now) {
+  if (dirserver_mode(options) && time_to_fetch_running_routers < now) {
     if (!authdir_mode_v1(options) && !should_delay_dir_fetches(options)) {
       directory_get_from_dirserver(DIR_PURPOSE_FETCH_RUNNING_LIST,
                                    ROUTER_PURPOSE_GENERAL, NULL, 1);
